--- a/render.yaml
+++ b/render.yaml
@@ -7,9 +7,11 @@ services:
       mix local.hex --force
       mix local.rebar --force
       mix deps.get --only prod
-      mix compile
-      mix ecto.migrate
-    startCommand: mix phx.server --no-halt
+      MIX_ENV=prod mix compile
+      cd assets && npm install && npm run build
+      cd ..
+      MIX_ENV=prod mix phx.digest
+    startCommand: MIX_ENV=prod mix phx.server
     envVars:
       - key: SECRET_KEY_BASE
         generateValue: true
@@ -17,6 +19,12 @@ services:
         value: prod
       - key: POOL_SIZE
         value: "10"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: safitech-db
+          property: connectionString
+    postDeployCommand: MIX_ENV=prod mix ecto.migrate
+
 databases:
   - name: safitech-db
     plan: free
